[tool.poetry]
name = "sqlalchemy-unit-of-work"
version = "0.1.0"
description = ""
authors = ["peroovy <iury.perov@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_unit_of_work"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
